fix: navigation on mobile

--- a/styles/components/_nav.scss
+++ b/styles/components/_nav.scss
@@ -4,18 +4,21 @@
 .nav {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
 
     &__list {
-        display: none;
+        display: flex;
+        flex-wrap: wrap;
+        column-gap: spacing-get(xl);
     }
 
-    @include breakpoint(sm) {
-        justify-content: space-between;
+    @include breakpoint(md, 'not all') {
+        flex-direction: column;
 
         &__list {
-            display: flex;
-            column-gap: spacing-get(xl);
+            flex-direction: column;
+            margin-top: spacing-get(lg);
+            text-align: center;
         }
     }
 }
